fix(ai-foundry): address review comments for Trigger unbounded polling and docs
Signed-off-by: Hemant M Mehta <hemant29mehta@gmail.com>